@@ -18,7 +18,8 @@ import rpy2.rlike.container as rlc
 
 from rpy2.robjects.robject import RObjectMixin, RObject
 import rpy2.robjects.functions
-from rpy2.robjects.environments import Environment
+from rpy2.robjects.environments import (Environment,
+                                        local_context)
 from rpy2.robjects.methods import methods_env
 from rpy2.robjects.methods import RS4
 
