@@ -1,4 +1,5 @@
 import os
+import typing
 import warnings
 from types import ModuleType
 from warnings import warn
@@ -64,19 +65,19 @@ def _eval_quiet(expr):
 # FIXME: should this be part of the API for rinterface ?
 #        (may be it is already the case and there is code
 #        duplicaton ?)
-def reval(string, envir=_globalenv):
+def reval(string: str,
+          envir: typing.Optional[rinterface.SexpEnvironment] = None):
     """ Evaluate a string as R code
     :param string: R code
     :type string: a :class:`str`
-    :param envir: an environment in which the environment should take
-      place (default: R's global environment)
+    :param envir: Optional environment to evaluate the R code.
     """
     p = rinterface.parse(string)
     res = _reval(p, envir=envir)
     return res
 
 
-def quiet_require(name, lib_loc=None):
+def quiet_require(name: str, lib_loc=None):
     """ Load an R package /quietly/ (suppressing messages to the console). """
     if lib_loc is None:
         lib_loc = "NULL"
