@@ -9,6 +9,9 @@ New Features
 - Singleton class :class:`rpy2.rinterface_lib.sexp.RVersion` to report
   the R version for the embedded R.
 
+- :func:`rpy2.rinterface.local_context` to create a context manager
+  to evaluate R code within a local environment.
+
 Changes
 -------
 
